caproto/v0.8.0/_sources/generated/caproto.server.records.MbboFields.rst.txt
caproto.server.records.MbboFields
=================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: MbboFields

.. autoclass:: MbboFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="mbbo"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: MbboFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - change_of_state_sevr
           - ``COSV``
           - Change of State Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - desired_output_loc
           - ``DOL``
           - Desired Output Loc
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - eight_string
           - ``EIST``
           - Eight String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - eight_value
           - ``EIVL``
           - Eight Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - eleven_string
           - ``ELST``
           - Eleven String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - eleven_value
           - ``ELVL``
           - Eleven Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - fifteen_string
           - ``FFST``
           - Fifteen String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - fifteen_value
           - ``FFVL``
           - Fifteen Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - five_string
           - ``FVST``
           - Five String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - five_value
           - ``FVVL``
           - Five Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - four_string
           - ``FRST``
           - Four String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - four_value
           - ``FRVL``
           - Four Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - fourteen_string
           - ``FTST``
           - Fourteen String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - fourteen_value
           - ``FTVL``
           - Fourteen Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - hardware_mask
           - ``MASK``
           - Hardware Mask
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - invalid_outpt_action
           - ``IVOA``
           - INVALID outpt action
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - invalid_output_value
           - ``IVOV``
           - INVALID output value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - last_value_alarmed
           - ``LALM``
           - Last Value Alarmed
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - last_value_monitored
           - ``MLST``
           - Last Value Monitored
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - nine_string
           - ``NIST``
           - Nine String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - nine_value
           - ``NIVL``
           - Nine Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - number_of_bits
           - ``NOBT``
           - Number of Bits
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - one_string
           - ``ONST``
           - One String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - one_value
           - ``ONVL``
           - One Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - output_mode_select
           - ``OMSL``
           - Output Mode Select
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - output_specification
           - ``OUT``
           - Output Specification
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - prev_raw_value
           - ``ORAW``
           - Prev Raw Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - prev_readback_value
           - ``ORBV``
           - Prev Readback Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - prev_simulation_mode
           - ``OLDSIMM``
           - Prev. Simulation Mode
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - raw_value
           - ``RVAL``
           - Raw Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Put**
           - 
    
        *  - readback_value
           - ``RBV``
           - Readback Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - seven_string
           - ``SVST``
           - Seven String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - seven_value
           - ``SVVL``
           - Seven Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - shift
           - ``SHFT``
           - Shift
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - sim_mode_async_delay
           - ``SDLY``
           - Sim. Mode Async Delay
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - sim_mode_scan
           - ``SSCN``
           - Sim. Mode Scan
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - simulation_mode
           - ``SIMM``
           - Simulation Mode
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - simulation_mode_link
           - ``SIML``
           - Simulation Mode Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - simulation_mode_severity
           - ``SIMS``
           - Simulation Mode Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - simulation_output_link
           - ``SIOL``
           - Simulation Output Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - six_string
           - ``SXST``
           - Six String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - six_value
           - ``SXVL``
           - Six Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_eight_severity
           - ``EISV``
           - State Eight Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_eleven_severity
           - ``ELSV``
           - State Eleven Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_fifteen_sevr
           - ``FFSV``
           - State Fifteen Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_five_severity
           - ``FVSV``
           - State Five Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_four_severity
           - ``FRSV``
           - State Four Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_fourteen_sevr
           - ``FTSV``
           - State Fourteen Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_nine_severity
           - ``NISV``
           - State Nine Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_one_severity
           - ``ONSV``
           - State One Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_seven_severity
           - ``SVSV``
           - State Seven Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_six_severity
           - ``SXSV``
           - State Six Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_ten_severity
           - ``TESV``
           - State Ten Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_thirteen_sevr
           - ``TTSV``
           - State Thirteen Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_three_severity
           - ``THSV``
           - State Three Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_twelve_severity
           - ``TVSV``
           - State Twelve Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_two_severity
           - ``TWSV``
           - State Two Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - state_zero_severity
           - ``ZRSV``
           - State Zero Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - states_defined
           - ``SDEF``
           - States Defined
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - ten_string
           - ``TEST``
           - Ten String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - ten_value
           - ``TEVL``
           - Ten Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - thirteen_string
           - ``TTST``
           - Thirteen String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - thirteen_value
           - ``TTVL``
           - Thirteen Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - three_string
           - ``THST``
           - Three String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - three_value
           - ``THVL``
           - Three Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - twelve_string
           - ``TVST``
           - Twelve String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - twelve_value
           - ``TVVL``
           - Twelve Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - two_string
           - ``TWST``
           - Two String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
                 **Get**
                 **Put**
           - 
    
        *  - two_value
           - ``TWVL``
           - Two Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - unknown_state_sevr
           - ``UNSV``
           - Unknown State Sevr
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - zero_string
           - ``ZRST``
           - Zero String
           - CHAR 
           - 
                 Length(26)
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
        *  - zero_value
           - ``ZRVL``
           - Zero Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.MbboFields`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~MbboFields.group_read
       ~MbboFields.group_write
       ~MbboFields.publish
       ~MbboFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~MbboFields.default_values
       ~MbboFields.has_val_field
       ~MbboFields.scan_rate_sec
       ~MbboFields.type_map
       ~MbboFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: eight_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: eleven_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: fifteen_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: five_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: four_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: fourteen_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: nine_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: one_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: seven_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: six_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: ten_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: thirteen_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: three_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: twelve_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68
    .. method:: two_string.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.8/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 63
        :lines: 63-68